# FURP-2026-Yiyang-GUO-EVRP-TW

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
configs/: performance.toml  reproduction.toml
cpp/: evrptw_core.cpp
docs/: 00_weekly.md  01_weekly.md  02_weekly.md  03_weekly.md  environment.md  reference_selection.md  references.bib  week01_ortools_vrptw_checkpoint.md  week02_baseline_recreation.md  week03_experiment_design_and_evaluation.md
experiments/summaries/: week03_per_run_results.csv  week03_summary_results.csv
src/: README.md
src/evrptw/: __init__.py  _core.pyi  environment.py  heuristics.py  metrics.py  models.py  parser.py  repairs.py  validation.py
src/evrptw/baselines/: __init__.py  ga_vrptw.py  ortools_vrptw.py
src/evrptw/experiments/: __init__.py  week02_baseline_comparison.py  week03_evaluation.py
src/evrptw/instances/: week01_vrptw_toy.txt
tests/: test_charging_repair.py  test_ga_vrptw_baseline.py  test_ortools_vrptw_baseline.py  test_week02_runner.py  test_week03_metrics.py  test_week03_runner.py
